# QuestTracker

./: CMakeLists.txt  CMakePresets.json  Readme.md
.github/workflows/: cmake-multi-platform.yml
include/: CMakeLists.txt  TaskList.hpp
src/: AppState.hpp  CMakeLists.txt  TaskList.cpp  TaskList.hpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
